# WHU_Final

./: .gitignore  CLAUDE.md  CMakeLists.txt  Justfile  README.md  default.profraw  词汇翻译表.md
docker/: riscv-oracle.Dockerfile
docs/: codegen-IR输入契约.md  codegen-O2满分落地参考.md  codegen-RV32IM落地参考.md  codegen-现状盘点.md  frontend-协作说明.md  整改-移除整程序求值.md
docs/plans/: 2026-06-24-codegen.md
docs/superpowers/plans/: 2026-06-22-ir-foundation.md  2026-06-24-irgen.md
docs/优化/: 12个性能测试的优化与取舍.md  实验报告-性能优化部分.md  实验报告-概述与前端设计.md  整程序求值与性能优化.md  答辩文稿-编译期整程序求值.md
include/toyc/: ast.h  ast_contract.h  ast_printer.h  ast_visitor.h  compiler.h  const_eval.h  diagnostics.h  eval.h  inliner.h  ir.h  irgen.h  lexer.h  optim.h  options.h  parser.h
src/codegen/: codegen.cpp
src/driver/: compiler.cpp  diagnostics.cpp  main.cpp  options.cpp
src/eval/: eval.cpp
src/frontend/: ast.cpp  ast_access.cpp  ast_printer.cpp  ast_visitor.cpp  lexer.cpp  parser.cpp
src/ir/: const_eval.cpp  inliner.cpp  ir.cpp  ir_printer.cpp  irgen.cpp  mem2reg.cpp  optim.cpp
src/sema/: const_eval.cpp  sema.cpp
test/: parser_fib.tc
test/codegen/: codegen_tests.cpp  run_codegen_oracle.sh  run_codegen_oracle_docker.sh
test/eval/: eval_tests.cpp
test/ir/: check.h  const_eval_tests.cpp  ir_pipeline_tests.cpp  ir_tests.cpp
test/perf/: p01_const.tc  p02_dead_code.tc  p03_copy.tc  p04_common_subexpr.tc  p05_algebra.tc  p06_tail_recursion.tc  p07_loop.tc  p08_basic_combined.tc  p09_advanced_graph.tc  p10_advanced_matrix.tc  p11_global_const_prop.tc  p12_const_expr_chain.tc  run_perf_oracle.sh
(+46 files in other folders)
